Fix rendering on smaller chrome screens
`text-size-adjust` applied on the textarea field and caused the text to
get rendered differently then the highlighted one

--- a/styles/Editor.module.css
+++ b/styles/Editor.module.css
@@ -28,6 +28,7 @@
   caret-color: var(--syntax-text);
   resize: none;
   -webkit-text-fill-color: transparent;
+  text-size-adjust: none;
 
   &:focus {
     border: none;
